Creating 10pg in french

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -48,7 +48,7 @@ A lot of time and effort from a lot of people has gone into this work. Without a
 
 First of all, I would like to profoundly thank my supervisors, Sabine Loudcher and Julien Ah-Pine, whom  never quit on me during this endeavor. When I recall the surprises and unexpected events I came up with throughout these years, I am amazed at their patience and guidance through it all. Thank you sincerely.
 
-I am very grateful with my jury members who accepted to review this work: Mathieu Roche, Marc El-Bèze, Farah Benamara Zitoune and Sophie Rosset. Thank you for your time and understanding.
+I am very grateful with my jury members who accepted to review this work:  Marc El-Bèze, Mathieu Roche, Farah Benamara Zitoune and Sophie Rosset. Thank you for your time and understanding.
 
 Thanks to my friends from the lab, Xinyu, Rado and Jairo, for being there and helping me to put things on perspective or to have some beers. Also thanks to the rest of the lab for having me there. 
 
