--- a/Thesis.tex
+++ b/Thesis.tex
@@ -28,7 +28,7 @@ Dans un premier temps, nous proposons un modèle de réseau basé sur des hypergrap
 Ces types de techniques sont régulièrement utilisés exclusivement pour combiner des données multimédia. Dans notre approche, nous considérons différentes représentations de texte comme des sources d'information distinctes qui peuvent être enrichies par elles-mêmes. Cette approche n'a pas été explorée auparavant, à notre connaissance.
 Troisièmement, nous proposons un algorithme qui exploite les caractéristiques du réseau pour identifier et grouper des mots liés sémantiquement en exploitant les propriétés  des réseaux. Contrairement aux méthodes similaires qui sont également basées sur la structure du réseau, notre algorithme réduit le nombre de paramètres requis et surtout, permet l'utilisation de réseaux lexicaux ou syntaxiques pour découvrir les groupes de mots, au lieu d'un type unique des caractéristiques comme elles sont habituellement employées.
 
-Nous nous concentrons sur deux tâches différentes de traitement du langage naturel: l'induction et la désambiguïsation des sens des mots (WSI/WSD) et la reconnaissance d'entité nommée (NER). Au total, nous testons nos propositions sur quatre ensembles de données différents. Nous effectuons nos expériences et développements en utilisant des corpus à accès libre. Les résultats obtenus nous permettent de montrer la pertinence de nos contributions et nous donnent également un aperçu des propriétés des caractéristiques hétérogènes et de leurs combinaisons avec les méthodes de fusion. Plus précisément, nos expériences sont doubles: premierment,  nous montrons qu'en utilisant des caractéristiques hétérogènes enrichies par la fusion, provenant de notre réseau linguistique proposé, nous surpassons la performance des systèmes à caractéristiques uniques et basés sur la simple concatenation de characteristiques. Aussi, nous analysons les opérateurs de fusion utilisés afin de mieux comprendre la raison de ces améliorations. En général, l'utilisation independante d'opérateurs de fusion  n'est pas aussi efficace que l'utilisation d'une combinaison de ceux-ci pour obtenir  une représentation spatiale finale. Nous testons sur les tâches WSI/WSD et NER mentionnées ci-dessus. Et deuxiement, nous abordons encore une fois la tâche WSI/WSD, cette fois-ci avec la méthode  à base de graphes proposée afin de démontrer sa pertinence par rapport à la tâche. Nous discutons les différents résultats obtenus avec des caractéristiques lexicales ou syntaxiques.
+Nous nous concentrons sur deux tâches différentes de traitement du langage naturel: l'induction et la induction et désambiguïsation des sens des mots (en anglais, Word Sense Induction and Disambiguation, ou WSI/WSD) et la reconnaissance d'entité nommées (en anglais, Named Entity Recognition, ou NER). Au total, nous testons nos propositions sur quatre ensembles de données différents. Nous effectuons nos expériences et développements en utilisant des corpus à accès libre. Les résultats obtenus nous permettent de montrer la pertinence de nos contributions et nous donnent également un aperçu des propriétés des caractéristiques hétérogènes et de leurs combinaisons avec les méthodes de fusion. Plus précisément, nos expériences sont doubles: premierment,  nous montrons qu'en utilisant des caractéristiques hétérogènes enrichies par la fusion, provenant de notre réseau linguistique proposé, nous surpassons la performance des systèmes à caractéristiques uniques et basés sur la simple concatenation de characteristiques. Aussi, nous analysons les opérateurs de fusion utilisés afin de mieux comprendre la raison de ces améliorations. En général, l'utilisation independante d'opérateurs de fusion  n'est pas aussi efficace que l'utilisation d'une combinaison de ceux-ci pour obtenir  une représentation spatiale finale. Nous testons sur les tâches WSI/WSD et NER mentionnées ci-dessus. Et deuxiement, nous abordons encore une fois la tâche WSI/WSD, cette fois-ci avec la méthode  à base de graphes proposée afin de démontrer sa pertinence par rapport à la tâche. Nous discutons les différents résultats obtenus avec des caractéristiques lexicales ou syntaxiques.
 
 Enfin, nous analysons un corpus basé sur Wikipedia en anglais et le stockons en suivant le modèle de réseau proposé. La version Wikipédia analysée sert de ressource linguistique à utiliser par d'autres chercheurs. Contrairement à d'autres ressources similaires, au lieu de simplement stocker l'étiquette morpho-syntaxique et ses relations de dépendance, nous prenons également en compte les informations de l'arbre syntaxique de chaque mot analysé. L'idée est que cette ressource soit utilisée pour de futurs développements sans avoir besoin de compiler une telle ressource à partir de zéro.
 
