--- a/network_soa_table.tex
+++ b/network_soa_table.tex
@@ -15,7 +15,7 @@ Agirre et al., 2006 \cite{2006.Agirre.TwoGraph-basedAlgorithms}                 
 Sinha and Mihalcea, 2007 \cite{2007.Sinha.Mihalcea.Unsupervised}                 & x                                  &                                   &                                     &                                         &                                                                                  & x                                      &                                                 &                                                                                      \\
 Navigli and Lapata, 2007\cite{2007.Navigli.GraphConnectivity}                    & x                                  &                                   &                                     &                                         &                                                                                  & x                                      & x                                               &                                                                                      \\
 Tsatsaronis et al., 2007 \cite{2007.Tsatsaronis.WSDwithSpreading}                & x                                  &                                   &                                     &                                         &                                                                                  &                                        & x                                               &                                                                                      \\
-Klapaftis and Manandhar, 2007 \cite{2007.Klapaftis.UOY}                          &                                    & x                                 &                                     &                                         & x                                                                                &                                        & x                                               &                                                                                      \\
+Klapaftis and Manandhar, 2007 \cite{2007.Klapaftis.UoY}                          &                                    & x                                 &                                     &                                         & x                                                                                &                                        & x                                               &                                                                                      \\
 Klapaftis and Manandhar, 2008 \cite{2008.Klapaftis.WSIUsingCollocations}         &                                    & x                                 &                                     &                                         & x                                                                                &                                        &                                                 & x                                                                                    \\
 Agirre and Soroa, 2008 \cite{2008.Agirre.Multilingual}                           & x                                  &                                   &                                     &                                         &                                                                                  & x                                      &                                                 &                                                                                      \\
 Agirre and Soroa, 2009 \cite{2009.Agirre.PersonalizedPageRankWSD}                & x                                  &                                   &                                     &                                         &                                                                                  & x                                      & x                                               &                                                                                      \\
