--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -549,7 +549,7 @@ year= {2016},
   author    = {Choudhury, Monojit and Mukherjee, Animesh},
   title     = {The Structure and Dynamics of Linguistic Networks},
   booktitle = {Dynamics On and Of Complex Networks},
-  publisher = {Birkhäuser Boston},
+  publisher = {Birkh\"{a}user Boston},
   editor    = {Ganguly, Niloy and Deutsch, Andreas and Mukherjee, Animesh},
   series    = {Modeling and Simulation in Science, Engineering and Technology},
   pages     = {145-166},
