--- a/network_soa_table.tex
+++ b/network_soa_table.tex
@@ -1,7 +1,7 @@
 
 \begin{table}[]
 \centering
-\caption{Survey summary table.}
+\caption{Summary table of several strategies found in the literature.}
 \label{tab:survey_sum}
 \setlength\tabcolsep{1.8mm}
 \def\arraystretch{.95}%
